# mahjong-score-calcualtor

./: .gitignore  .pdm-python  README.md
app/: .pdm-python  best-fp16.tflite  buildozer.spec  pyproject.toml
app/src/: calculate_score.py  main.py
training/: .pdm-python  pyproject.toml
training/src/: main.py
training/src/dataset/: README.dataset.txt  README.roboflow.txt  tile_dataset.py
training/src/dataset/test/: _annotations.coco.json
training/src/dataset/train/: _annotations.coco.json
training/src/dataset/valid/: _annotations.coco.json
training/src/model/: anchors.py  annotation_conversion.py  conv.py  yolo.py  yolo_backbone.py  yolo_head.py  yolo_loss.py
training/src/model_v2/: darknet_backbone.py  env.py  iou.py  model_progress_utils.py  test_model.py  training_model.py  visualize_output.py  yolo_loss.py
training/src/model_v2/dataset/: README.dataset.txt  README.roboflow.txt  tile_dataset_v2.py
training/src/model_v2/dataset/test/: 202205313_jpg.rf.a31734d25cb4a418621d27733c3e4b0f.txt  202205313_jpg.rf.e6c6f2d54aefb9326ce6882575368ba3.txt  202205314_jpg.rf.bdad0ad030f8e6dcdcceb80180635f76.txt  202205315_jpg.rf.3fc5390fff05ca07872d88468c00b191.txt  202205315_jpg.rf.7f51c1bc00f980c00129a2c15366a720.txt  202205316_jpg.rf.00abe3cc0ec75fc34bef46ed3d7d3f62.txt  202205316_jpg.rf.ecf7016d65da3f216c984d0998009916.txt  202205317_jpg.rf.59d85d75d5ed2b197e0b746424520ccb.txt  202205318_jpg.rf.d7626d7f7f1f3971155647c56534c917.txt  QQ-20230112181546_png.rf.03e7470e4e7e98a69810cd0d5a650f15.txt  QQ-20230112181553_png.rf.9bfd3e270edcdc5ad2bba2e3fcdb68ba.txt  (+177 more)
(+1702 files in other folders)
