[project]
authors = [
    {name = "Krzysztof Mach", email = "mach.krzsztf@gmail.com"},
]
dependencies = ["kivy>=2.3.1", "plyer>=2.1.0", "mahjong>=1.2.1", "buildozer>=1.5.0", "Cython==0.29.33", "virtualenv>=20.30.0", "setuptools>=79.0.1", "pip>=25.0.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
